# mbpol_cuda_devel

./: .travis.yml
NN_2L2H2O_poly2d/: Makefile
NN_2L2H2O_poly2d_CPU/: 16.hdf5  CMakeLists.txt  Gfunction.h  Gfunction_v2.cpp  Gfunction_v2.h  Makefile  README.MD  atomTypeID.cpp  atomTypeID_v2.cpp  atomTypeID_v2.h  fullTester.cpp  network.cpp  network.h  runtime.comet  runtime.log.bw.tmp  tester.cpp  tester.in  timestamps.cpp  timestamps.h  utility.h  xyzData.h  y_pred.txt
NN_2L2H2O_poly2d_CPU/inc/: Gfunction.h  Gfunction_v2.h  H_3H2O_max  atomTypeID_v2.h  bpnn_main.h  network.h  readGparams.h  readGparams_v2.h  timestamps.h  utility.h
NN_2L2H2O_poly2d_CPU/res/: 22.hdf5  34.hdf5  run_accuracy_test.x  run_bench.x
NN_2L2H2O_poly2d_CPU/res/BPNN-2b/: 2b_test.xyz  2b_to_fit_xyz_energy.ref  H_2H2O_max  O_2H2O_max
NN_2L2H2O_poly2d_CPU/res/BPNN-2b/max_per_feature/: 00_max  01_max  H1_max  H2_max  H4_max  H5_max
NN_2L2H2O_poly2d_CPU/res/BPNN-3b/: 3b_test.xyz  3b_to_fit_rounded_xyz_energy.ref  O_3H2O_max
NN_2L2H2O_poly2d_CPU/res/BPNN-3b/max_per_feature/: 00_max  01_max  02_max  13_max  14_max  15_max  16_max  17_max  18_max
NN_2L2H2O_poly2d_CPU/src/: Gfunction.cpp  Gfunction.h  Gfunction_v2.cpp  atomTypeID.cpp  atomTypeID_v2.cpp  atomTypeID_v2.h  bpnn_main.cpp  fullTester.cpp  network.cpp  network.h  readGparams.cpp  readGparams_v2.cpp  readhdf5.hpp  timestamps.cpp  utility.cpp  utility.h  xyzData.cpp  xyzData.h
NN_2L2H2O_poly2d_GPU/: 2b_test.xyz  34.hdf5  Gfunction_cu.cu  Gfunction_cu.cuh  Gfunction_v2.cu  Gfunction_v2.cuh  H_max  Makefile  O_max  README  atomTypeID.h  atomTypeID_v2.h  driver.cu  gfuncTest.cu  network.cuh  readGparams.cu  readGparams_cu.cuh  readGparams_v2.h  readhdf5.hpp  test.cu  utility.cpp  utility.h  utility_cu.cu  utility_cu.cuh
